clusters/production/infrastructure/cilium-cluster-wide-policies.yaml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  endpointSelector:
    matchLabels: {}
  ingressDeny:
  - fromEntities:
    - world

---

apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-cluster-internal
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEntities:
    - cluster
  egress:
  - toEntities:
    - cluster

---
